Add 'include_entity_details' option and debug logs
Introduces the 'include_entity_details' option to translations for multiple languages, allowing users to control entity detail inclusion in prompts. Adds debug logging for prompt building and provider responses in the coordinator. Fixes a minor syntax issue in config_flow.py.

--- a/custom_components/ai_automation_suggester/translations/ca.json
+++ b/custom_components/ai_automation_suggester/translations/ca.json
@@ -273,6 +273,10 @@
         "automation_limit": {
           "name": "Límit d'Automatitzacions",
           "description": "Nombre màxim d'automatitzacions a analitzar (per defecte: 100)."
+        },
+        "include_entity_details": {
+          "name": "Incloure Detalls d'Entitats",
+          "description": "Incloure informació detallada de les entitats (atributs i informació del dispositiu) al prompt. Desactivar això redueix l'ús de tokens però proporciona menys context a la IA."
         }
       }
     }
