--- a/custom_components/ai_automation_suggester/translations/ru.json
+++ b/custom_components/ai_automation_suggester/translations/ru.json
@@ -245,6 +245,10 @@
         "automation_limit": {
           "name": "Лимит автоматизаций",
           "description": "Максимальное количество автоматизаций для анализа (по умолчанию: 100)."
+        },
+        "include_entity_details": {
+          "name": "Включить детали сущностей",
+          "description": "Включать подробную информацию о сущностях (атрибуты и информация об устройстве) в запрос. Отключение снижает использование токенов, но предоставляет меньше контекста ИИ."
         }
       }
     }
